# hearth

./: .gitignore  README.md  pyproject.toml
config/: models.yaml  routing.escalation-demo.yaml  routing.private.yaml  routing.yaml
config/cmux/: tiers.example.yaml
data/: extract.jsonl  extract_golden.jsonl  route.jsonl  route_golden.jsonl
docs/: API.md  ARCHITECTURE.md  DECISIONS.md  HANDOFF.md  INTEGRATION.md  PLUGINS.md  PRIVACY.md  PROPOSAL.md  RESULTS.md  ROADMAP.md  RUNBOOK_consumer_wiring.md  RUNBOOK_training.md
docs/cmux/: ARCHITECTURE.md  AUDIT.md  DECISIONS.md  PRIVACY.md  PROPOSAL.md  README.md  RESULTS.md  ROADMAP.md  RUNBOOK_onhardware.md  RUNBOOK_open.md  RUNBOOK_orchestrator.md  RUNBOOK_sealed.md  RUNBOOK_wiring.md  WORKFLOW.md
examples/: cambot_offload.py  cambot_offload.swift  claude_code_mcp.md
examples/cmux/: hearth.mcp.json  offload_demo.py  sealed-pane.env
examples/plugin/: pyproject.toml
examples/plugin/hearth_hello/: __init__.py
scripts/: bench.py  build_extract_dataset.py  build_route_dataset.py  coreml_stateful_reference.py  coreml_stateful_repro.py  eval_candidate.py  frontier_stub.py  hearth_private.sh  train_lora_real.sh
scripts/cmux/: cmux-open  cmux-open.1  cmux-orchestrator.1  cmux-sealed  cmux-sealed.1  cmux-sealed.pf.conf  cmux_egress_probe.sh  orchestrator.py  orchestrator_demo.py  tier_classify.py
src/hearth/: __init__.py  __main__.py  cli.py  client.py  config.py  convert.py  coreml.py  doctor.py  plugins.py
src/hearth/gateway/: __init__.py  app.py  auth.py  schemas.py
src/hearth/mcp/: __init__.py  server.py  tools.py
src/hearth/memory/: __init__.py  embed.py  rag.py  store.py
src/hearth/observability/: __init__.py  budget.py  metrics.py
src/hearth/providers/: __init__.py  base.py  echo.py  mlx.py  remote.py
src/hearth/registry/: __init__.py  adapters.py
src/hearth/router/: __init__.py  classify.py  policy.py  route.py
src/hearth/serving/: __init__.py  manager.py
src/hearth/training/: __init__.py  dataset.py  eval.py  lora.py
swift/: OFFLINE.md  Package.swift  README.md
swift/Sources/Hearth/: CoreMLProvider.swift  FoundationModelsProvider.swift  HearthClient.swift  HearthInference.swift
swift/Sources/HearthCoreML/: CoreMLGeneration.swift  CoreMLProvider.swift
swift/Tests/HearthCoreMLTests/: CoreMLGenerationTests.swift  (+1 more)
tests/: conftest.py  test_adapter_hotswap.py  test_adapters_registry.py  test_budget.py  test_classify.py  test_cli.py  test_cli_eval.py  test_cli_phase7.py  test_cli_training.py  test_client.py  test_cmux_orchestrator.py  test_cmux_tier_classify.py  test_conformance.py  test_convert.py  test_coreml.py  test_doctor.py  test_gateway.py  test_hardening.py  test_mcp_tools.py  test_memory.py  test_mlx_stream.py  test_observability.py  test_plugins.py  test_policy.py  test_provider_contract.py  test_rag_endpoints.py  test_registry.py  test_remote_provider.py  test_router.py  test_router_gateway.py  test_scripts_smoke.py  test_serving_manager.py  test_training_dataset.py  test_training_eval.py  test_training_lora.py  test_vector_store_sqlitevec.py
(+3 files in other folders)
