# Example HEARTH provider plugin (Phase 7 reference).
#
# This is a standalone package that extends HEARTH via a packaging entry point. It is NOT
# installed by the HEARTH repo — it exists as a reference and a test fixture. To try it:
#
#     cd examples/plugin && uv pip install -e .
#     HEARTH_BACKEND=hello hearth run "hi there"      # served by the plugin
#     hearth plugins list                              # shows: hello  hearth.providers  ok
#
# The `[project.entry-points."hearth.providers"]` table below is the whole integration:
# HEARTH discovers the `hello` name and resolves it to `hearth_hello:build` with zero edits
# to HEARTH's source. See docs/PLUGINS.md.

[project]
name = "hearth-hello-plugin"
version = "0.1.0"
description = "Example HEARTH provider plugin demonstrating the entry-point extension path."
requires-python = ">=3.11"
# No dependency on hearth itself: the ModelProvider interface is a structural Protocol.
dependencies = []

[project.entry-points."hearth.providers"]
hello = "hearth_hello:build"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hearth_hello"]
